added fields to the publish tab in the controller

--- a/src/View/View.fxml
+++ b/src/View/View.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -265,59 +264,24 @@
                                           <Label text="Price per ticket($):" GridPane.rowIndex="3" />
                                           <Label text="Allow buy part of tickets:" GridPane.rowIndex="5" />
                                           <Label text="Vacation type:" GridPane.rowIndex="6" />
-                                          <HBox prefHeight="28.0" prefWidth="355.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                                             <children>
-                                                <CheckBox mnemonicParsing="false" prefHeight="61.0" prefWidth="91.0" text="Pleasure" />
-                                                <Label alignment="CENTER" prefHeight="66.0" prefWidth="165.0" text="or" />
-                                                <CheckBox mnemonicParsing="false" prefHeight="58.0" prefWidth="85.0" text="Business" />
-                                             </children>
-                                          </HBox>
-                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                                             <children>
-                                                <CheckBox mnemonicParsing="false" prefHeight="65.0" prefWidth="89.0" text="Yes" />
-                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="64.0" prefWidth="167.0" text="or" />
-                                                <CheckBox mnemonicParsing="false" prefHeight="63.0" prefWidth="49.0" text="No" />
-                                             </children>
-                                          </HBox>
                                           <Label text="Flight Type:" GridPane.rowIndex="7" />
                                           <Label text="Baggage Included:" GridPane.rowIndex="8" />
-                                          <Label text="Bagge limit:" GridPane.rowIndex="9" />
-                                          <HBox prefHeight="28.0" prefWidth="355.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
-                                             <children>
-                                                <CheckBox mnemonicParsing="false" prefHeight="60.0" prefWidth="91.0" text="One-Way" />
-                                                <Label alignment="CENTER" prefHeight="60.0" prefWidth="165.0" text="or" />
-                                                <CheckBox mnemonicParsing="false" prefHeight="67.0" prefWidth="104.0" text="Round-Trip" />
-                                             </children>
-                                          </HBox>
-                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
-                                             <children>
-                                                <CheckBox mnemonicParsing="false" prefHeight="73.0" prefWidth="89.0" text="Yes" />
-                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="61.0" prefWidth="167.0" text="or" />
-                                                <CheckBox mnemonicParsing="false" prefHeight="63.0" prefWidth="49.0" text="No" />
-                                             </children>
-                                          </HBox>
-                                          <TextField GridPane.columnIndex="1" />
-                                          <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                          <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <TextField GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                                          <Label text="Baggage limit:" GridPane.rowIndex="9" />
+                                          <TextField fx:id="sourcePublish" alignment="CENTER" GridPane.columnIndex="1" />
+                                          <TextField fx:id="destinationPublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <TextField fx:id="ticketsNumPublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <TextField fx:id="pricePublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                          <TextField fx:id="baggageLimitPublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="9" />
                                           <Label text="Tickets class:" GridPane.rowIndex="4" />
-                                          <HBox GridPane.columnIndex="1" GridPane.rowIndex="4">
-                                             <children>
-                                                <CheckBox mnemonicParsing="false" prefHeight="35.0" prefWidth="89.0" text="Economy" />
-                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="72.0" prefWidth="167.0" text="or" />
-                                                <CheckBox mnemonicParsing="false" prefHeight="71.0" prefWidth="85.0" text="Business" />
-                                             </children>
-                                          </HBox>
                                           <Label text="Hospitality included:" GridPane.rowIndex="10" />
                                           <Label text="Hospitality rank:" GridPane.rowIndex="11" />
-                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
-                                             <children>
-                                                <CheckBox mnemonicParsing="false" prefHeight="73.0" prefWidth="89.0" text="Yes" />
-                                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="61.0" prefWidth="167.0" text="or" />
-                                                <CheckBox mnemonicParsing="false" prefHeight="63.0" prefWidth="49.0" text="No" />
-                                             </children>
-                                          </HBox>
+                                          <ChoiceBox fx:id="ticketsClassPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                          <ChoiceBox fx:id="partTicketsPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                          <ChoiceBox fx:id="vacationTypePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                          <ChoiceBox fx:id="flightTypePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                          <ChoiceBox fx:id="baggagePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                                          <ChoiceBox fx:id="hospitalityPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                                          <TextField fx:id="hospitalityRankPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="11" />
                                        </children>
                                     </GridPane>
                                  </children>
