--- a/src/View/View.fxml
+++ b/src/View/View.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -12,6 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -227,69 +229,112 @@
             </GridPane>
          </content>
       </Tab>
-      <Tab text="Vacations">
+      <Tab fx:id="vacationsTab" text="Vacations">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TabPane prefHeight="355.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
-                    <tabs>
-                      <Tab text="Search" />
-                      <Tab text="Publish">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <GridPane prefHeight="293.0" prefWidth="600.0">
-                                      <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="187.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="413.0" minWidth="10.0" prefWidth="413.0" />
-                                      </columnConstraints>
-                                      <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      </rowConstraints>
+                  <VBox>
+                     <children>
+                        <TabPane prefHeight="355.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+                          <tabs>
+                            <Tab fx:id="searchTab" text="Search" />
+                            <Tab fx:id="publishTab" text="Publish">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
-                                          <Label text="From country:" />
-                                          <Label layoutX="10.0" layoutY="13.0" text="Destination Country:" GridPane.rowIndex="1" />
-                                          <Label text="Number of tickets:" GridPane.rowIndex="2" />
-                                          <Label text="Price per ticket($):" GridPane.rowIndex="3" />
-                                          <Label text="Allow buy part of tickets:" GridPane.rowIndex="5" />
-                                          <Label text="Vacation type:" GridPane.rowIndex="6" />
-                                          <Label text="Flight Type:" GridPane.rowIndex="7" />
-                                          <Label text="Baggage Included:" GridPane.rowIndex="8" />
-                                          <Label text="Baggage limit:" GridPane.rowIndex="9" />
-                                          <TextField fx:id="sourcePublish" alignment="CENTER" GridPane.columnIndex="1" />
-                                          <TextField fx:id="destinationPublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <TextField fx:id="ticketsNumPublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                          <TextField fx:id="pricePublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <TextField fx:id="baggageLimitPublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                                          <Label text="Tickets class:" GridPane.rowIndex="4" />
-                                          <Label text="Hospitality included:" GridPane.rowIndex="10" />
-                                          <Label text="Hospitality rank:" GridPane.rowIndex="11" />
-                                          <ChoiceBox fx:id="ticketsClassPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                          <ChoiceBox fx:id="partTicketsPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                          <ChoiceBox fx:id="vacationTypePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                                          <ChoiceBox fx:id="flightTypePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                                          <ChoiceBox fx:id="baggagePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                                          <ChoiceBox fx:id="hospitalityPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-                                          <TextField fx:id="hospitalityRankPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+                                          <VBox>
+                                             <children>
+                                                <GridPane prefHeight="278.0" prefWidth="600.0">
+                                                  <columnConstraints>
+                                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="177.0" />
+                                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="432.0" minWidth="10.0" prefWidth="423.0" />
+                                                  </columnConstraints>
+                                                  <rowConstraints>
+                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                  </rowConstraints>
+                                                   <children>
+                                                      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="From country:" />
+                                                      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Number of tickets:" GridPane.rowIndex="2" />
+                                                      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Price per ticket($):" GridPane.rowIndex="3" />
+                                                      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Vacation type:" GridPane.rowIndex="5" />
+                                                      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Flight Type:" GridPane.rowIndex="6" />
+                                                      <HBox GridPane.rowIndex="7">
+                                                         <children>
+                                                            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="246.0" text="Baggage Included:" />
+                                                            <CheckBox fx:id="baggagePublishClick" mnemonicParsing="false" onAction="#baggagePublish" prefHeight="21.0" prefWidth="12.0" />
+                                                         </children>
+                                                      </HBox>
+                                                      <HBox GridPane.columnIndex="1">
+                                                         <children>
+                                                            <TextField fx:id="sourcePublish" alignment="CENTER" prefHeight="31.0" prefWidth="189.0" />
+                                                            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="204.0" text="Destination Country:" />
+                                                            <TextField fx:id="destinationPublish" alignment="CENTER" />
+                                                         </children>
+                                                      </HBox>
+                                                      <HBox GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                                         <children>
+                                                            <TextField fx:id="ticketsNumPublish" alignment="CENTER" prefHeight="31.0" prefWidth="150.0" />
+                                                            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="206.0" text="Allow buy part of tickets:" />
+                                                            <CheckBox fx:id="partTicketsPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#partTicketsPublishClick" prefHeight="31.0" prefWidth="109.0" />
+                                                         </children>
+                                                      </HBox>
+                                                      <TextField fx:id="pricePublish" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                                      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Tickets class:" GridPane.rowIndex="4" />
+                                                      <HBox GridPane.rowIndex="8">
+                                                         <children>
+                                                            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="177.0" text="Hospitality included:" />
+                                                            <CheckBox fx:id="hospitalityPublish" mnemonicParsing="false" onAction="#hospitalityPublishClick" />
+                                                         </children>
+                                                      </HBox>
+                                                      <ChoiceBox fx:id="vacationTypePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                                      <ChoiceBox fx:id="flightTypePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                                      <HBox GridPane.columnIndex="1" GridPane.rowIndex="7">
+                                                         <children>
+                                                            <Label prefHeight="21.0" prefWidth="133.0" text="Baggage limit:" />
+                                                            <TextField fx:id="baggageLimitPublish" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="298.0" />
+                                                         </children>
+                                                      </HBox>
+                                                      <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="From date:" GridPane.rowIndex="1" />
+                                                      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                         <children>
+                                                            <DatePicker fx:id="fromDatePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="209.0" />
+                                                            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="122.0" text="To date:" />
+                                                            <DatePicker fx:id="toDatePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
+                                                         </children>
+                                                      </HBox>
+                                                      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                                                         <children>
+                                                            <Label prefHeight="21.0" prefWidth="184.0" text="Hospitality rank:" />
+                                                            <TextField fx:id="hospitalityRankPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="349.0" />
+                                                         </children>
+                                                      </HBox>
+                                                      <ChoiceBox fx:id="ticketsClassPublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="137.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                                   </children>
+                                                </GridPane>
+                                                <HBox prefHeight="38.0" prefWidth="600.0">
+                                                   <children>
+                                                      <Button alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#flightListPublish" prefHeight="38.0" prefWidth="364.0" text="Flights list (0)" />
+                                                      <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#publishPublish" prefHeight="38.0" prefWidth="350.0" text="Publish!" />
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </VBox>
                                        </children>
-                                    </GridPane>
-                                 </children>
-                              </AnchorPane>
-                        </content>
-                      </Tab>
-                    </tabs>
-                  </TabPane>
+                                    </AnchorPane>
+                              </content>
+                            </Tab>
+                          </tabs>
+                        </TabPane>
+                     </children>
+                  </VBox>
                </children>
             </AnchorPane>
         </content>
