--- a/src/View/View.fxml
+++ b/src/View/View.fxml
@@ -269,7 +269,7 @@
                                                       <HBox GridPane.rowIndex="7">
                                                          <children>
                                                             <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="246.0" text="Baggage Included:" />
-                                                            <CheckBox fx:id="baggagePublishClick" mnemonicParsing="false" onAction="#baggagePublish" prefHeight="21.0" prefWidth="12.0" />
+                                                            <CheckBox fx:id="baggagePublish" mnemonicParsing="false" onAction="#baggagePublishClick" prefHeight="21.0" prefWidth="12.0" />
                                                          </children>
                                                       </HBox>
                                                       <HBox GridPane.columnIndex="1">
