--- a/src/View/View.fxml
+++ b/src/View/View.fxml
@@ -18,7 +18,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<TabPane fx:id="tabPane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="Controller.ViewController">
+<?import javafx.scene.control.ComboBox?>
+<TabPane fx:id="tabPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ViewController">
    <tabs>
       <Tab fx:id="signTab" text="Sign in">
          <content>
@@ -249,7 +250,92 @@
                      <children>
                         <TabPane fx:id="vacationTabPane" prefHeight="355.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
                           <tabs>
-                            <Tab fx:id="searchTab" text="Search" />
+                              <Tab fx:id="searchTab" text="Search">
+                                  <content>
+                                      <GridPane fx:id="gridPane_searchFilters" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                                          <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="10.0" prefWidth="134.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="466.0" />
+                                          </columnConstraints>
+                                          <rowConstraints>
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          </rowConstraints>
+                                          <children>
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="From date:" GridPane.rowIndex="3" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="256.0" text="To date:" GridPane.rowIndex="4" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="Flight company:" GridPane.rowIndex="5" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="224.0" text="Tickets type:" GridPane.rowIndex="6" />
+                                              <TextField fx:id="textField_flightCompany" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                              <TextField fx:id="textField_ticketsType" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="258.0" text="Search by:" underline="true">
+                                                  <font>
+                                                      <Font name="Aharoni Bold" size="18.0" />
+                                                  </font>
+                                              </Label>
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="242.0" text="Source country:" GridPane.rowIndex="1" />
+                                              <TextField fx:id="textField_sourceCountry" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="242.0" text="Destination country:" GridPane.rowIndex="2" />
+                                              <TextField fx:id="textField_destinationCountry" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                              <DatePicker fx:id="datePicker_fromDate" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                              <DatePicker fx:id="datePicker_toDate" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="Flight type" GridPane.rowIndex="7" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="Price per ticket:" GridPane.rowIndex="8" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="Tickets quantity" GridPane.rowIndex="9" />
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="baggage_Included:" GridPane.rowIndex="10" />
+                                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="10">
+                                                  <columnConstraints>
+                                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="138.0" />
+                                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="10.0" prefWidth="328.0" />
+                                                  </columnConstraints>
+                                                  <rowConstraints>
+                                                      <RowConstraints />
+                                                  </rowConstraints>
+                                                  <children>
+                                                      <CheckBox fx:id="checkBox_baggage" mnemonicParsing="false" prefWidth="138.0" text="baggage_Included included?" GridPane.columnIndex="0" />
+                                                      <TextField fx:id="textField_baggage" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                                  </children>
+                                              </GridPane>
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="Hospitality:" GridPane.rowIndex="11" />
+                                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="11">
+                                                  <columnConstraints>
+                                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="138.0" />
+                                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="10.0" prefWidth="328.0" />
+                                                  </columnConstraints>
+                                                  <rowConstraints>
+                                                      <RowConstraints />
+                                                  </rowConstraints>
+                                                  <children>
+                                                      <CheckBox fx:id="checkBox_hospitality" mnemonicParsing="false" prefWidth="138.0" text="Hospitality included?" GridPane.columnIndex="0" />
+                                                      <TextField fx:id="textField_hospitality" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                                  </children>
+                                              </GridPane>
+                                              <Label alignment="CENTER" prefHeight="21.0" prefWidth="240.0" text="Vacation type:" GridPane.rowIndex="12" />
+                                              <TextField fx:id="textField_maxPricePerTicket" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                                              <TextField fx:id="textField_ticketsQuantity" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                                              <ComboBox fx:id="comboBox_flightType" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                              <ComboBox fx:id="comboBox_vacationType" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+                                              <Button mnemonicParsing="false" onAction="#searchByFilters" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"  text="Search!" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+                                              <Button mnemonicParsing="false" onAction="#cleanFilters" prefHeight="21.0" prefWidth="240.0" text="Clean filters" GridPane.rowIndex="13" />
+
+                                              <!--<TextField GridPane.columnIndex="1" GridPane.rowIndex="11" />-->
+
+                                          </children>
+                                      </GridPane>
+                                  </content>
+                              </Tab>
                             <Tab fx:id="publishTab" text="Publish">
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -310,7 +396,7 @@
                                                       <ChoiceBox fx:id="flightTypePublish" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                                                       <HBox GridPane.columnIndex="1" GridPane.rowIndex="7">
                                                          <children>
-                                                            <Label prefHeight="21.0" prefWidth="133.0" text="Baggage limit:" />
+                                                            <Label alignment="CENTER" prefHeight="21.0" prefWidth="133.0" text="Baggage limit:" />
                                                             <TextField fx:id="baggageLimitPublish" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="298.0" />
                                                          </children>
                                                       </HBox>
@@ -324,7 +410,7 @@
                                                       </HBox>
                                                       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
                                                          <children>
-                                                            <Label prefHeight="21.0" prefWidth="184.0" text="Hospitality rank:" />
+                                                            <Label alignment="CENTER" prefHeight="21.0" prefWidth="184.0" text="Hospitality rank:" />
                                                             <TextField fx:id="hospitalityRankPublish" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="349.0" />
                                                          </children>
                                                       </HBox>
