--- a/src/View/View.fxml
+++ b/src/View/View.fxml
@@ -8,8 +8,10 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -19,8 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.TableView?>
-<TabPane fx:id="tabPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ViewController">
+<TabPane fx:id="tabPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ViewController">
    <tabs>
       <Tab fx:id="signTab" text="Sign in">
          <content>
@@ -425,6 +426,7 @@
                                           </GridPane>
                                           <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                                              <children>
+                                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#reserPublish" prefHeight="38.0" prefWidth="333.0" text="Reset" />
                                                 <Button fx:id="flightListBut" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#flightListPublish" prefHeight="38.0" prefWidth="364.0" text="Flights list (0)" />
                                                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#publishPublish" prefHeight="38.0" prefWidth="350.0" text="Publish!" />
                                              </children>
@@ -443,22 +445,24 @@
       </Tab>
        <Tab fx:id="requestTab" text="Requests">
            <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                   <children>
-                       <TabPane prefHeight="354.0" prefWidth="601.0" tabClosingPolicy="UNAVAILABLE">
+            <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+               <content>
+                       <TabPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="383.0" prefWidth="2000.0" tabClosingPolicy="UNAVAILABLE">
                            <tabs>
                                <Tab text="My requests">
                                    <content>
                                        <TableView fx:id="tableView_myRequests" prefHeight="200.0" prefWidth="200.0" />
-                                   </content></Tab>
+                                   </content>
+                        </Tab>
                                <Tab text="Received requests">
                                    <content>
                                        <TableView fx:id="tableView_receivedRequests" prefHeight="200.0" prefWidth="200.0" />
-                                   </content></Tab>
+                                   </content>
+                        </Tab>
                            </tabs>
                        </TabPane>
-                   </children>
-               </AnchorPane>
+               </content>
+            </ScrollPane>
            </content>
        </Tab>
    </tabs>
